# pyqtgraph-app

./: pyproject.toml
