[tool.poetry]
name = "pyqtgraph-app"
version = "0.1.0"
description = ""
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"
packages = [{include = "pyqtgraph_app"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqtgraph = "^0.13.3"
pyqt5 = "^5.15.9"
pyaudio = "^0.2.13"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
